--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 		<nav>
 			<ul>
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">MENU</a></li>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="menu.html">MENU</a></li>
 				<li><a href="#">RESERVATION</a></li>
 			</ul>
 		</nav>
