--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
 			<ul>
 				<li><a href="index.html">HOME</a></li>
 				<li><a href="menu.html">MENU</a></li>
-				<li><a href="#">RESERVATION</a></li>
+				<li><a href="contact.html">RESERVATION</a></li>
 			</ul>
 		</nav>
 
@@ -67,7 +67,7 @@
 	<br/>
 	<div id="right">
 		<ul>
-			<li class="box-shadow"><a id="contact" href="#">contact</a></li>
+			<li class="box-shadow"><a id="contact" href="contact.html">contact</a></li>
 			<li class="box-shadow"><a id="blog" href="#">stylist blog</a></li>
 		</ul>
 	</div>
