--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>NESThair</title>
+	<title>hair salon ZZZ</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
 
