--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Nuosu+SIL&family=Press+Start+2P&family=Questrial&family=Roboto:wght@700&family=Vina+Sans&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -29,21 +28,18 @@
 				<li><a href="contact.html">RESERVATION</a></li>
 			</ul>
 		</nav>
-
-		<div class="clear"></div>
-
 	</header>
 	<!-- ヘッダーここまで -->
 
 	<!-- メイン画像ここから -->
-	<div id="mainimage" class="box-shadow">
+	<div id="mainimage" class="box">
 		<img src="img/mainimage.jpg" alt="メイン画像" width="950">
 	</div>
 	<!-- メイン画像ここまで -->
 
 	<!-- 左ここから -->
     <br/>
-	<div id="left" class="box-shadow">
+	<div id="left" class="box">
 		<h2>NEWS</h2>
 		<ul>
 			<li><span>2023-09-20</span>タイトルがはいります。タイトルがはいります。</li>
@@ -63,8 +59,8 @@
     <br/>
 	<div id="right">
 		<ul>
-			<li class="box-shadow"><a id="contact" href="contact.html">contact</a></li>
-			<li class="box-shadow"><a id="blog" href="#">stylist blog</a></li>
+			<li class="box"><a id="contact" href="contact.html">contact</a></li>
+			<li class="box"><a id="blog" href="#">stylist blog</a></li>
 		</ul>
 	</div>
 	<!-- 右ここまで -->
@@ -72,6 +68,8 @@
 	<div class="clear"></div>
 
 </div><!-- //#wrapper -->
+
+<br/>
 
 	<!-- フッターここから -->
 	<footer>
