--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<title>hair salon ZZZ</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Nuosu+SIL&family=Press+Start+2P&family=Questrial&family=Roboto:wght@700&family=Vina+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -32,14 +35,14 @@
 	<!-- ヘッダーここまで -->
 
 <!-- menuメイン画像ここから -->
-<div id="reservationmainimage" class="box-shadow">
+<div id="reservationmainimage" class="box">
 	<img src="img/reservationmainimage.jpg" alt="メイン画像" width="950">
 </div>
 <!-- メイン画像ここまで -->
 
 
 	<!-- 左ここから -->
-	<div id="left" class="box-shadow">
+	<div id="left" class="box">
 		<h4>RESERVATION</h4>
 		<p id="contact_text">
 			下記お問い合わせフォームよりご希望の日時、ご予約内容をお知らせください。<br>
@@ -115,8 +118,8 @@
 	<br/>
 	<div id="right-contact">
 		<ul>
-			<!-- <li class="box-shadow"><a id="contact" href="#">CONTACT</a></li> -->
-			<li class="box-shadow"><a id="blog" href="#">stylist blog</a></li>
+			<!-- <li class="box"><a id="contact" href="#">CONTACT</a></li> -->
+			<li class="box"><a id="blog" href="#">stylist blog</a></li>
 		</ul>
 	</div>
 	<!-- 右ここまで -->
