--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<title>hair salon ZZZ</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Nuosu+SIL&family=Press+Start+2P&family=Questrial&family=Roboto:wght@700&family=Vina+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -32,13 +35,13 @@
 	<!-- ヘッダーここまで -->
 
 <!-- menuメイン画像ここから -->
-<div id="menumainimage" class="box-shadow">
+<div id="menumainimage" class="box">
 	<img src="img/menumainimage.jpg" alt="メイン画像" width="950">
 </div>
 <!-- メイン画像ここまで -->
 
 	<!-- 左ここから -->
-	<div id="left" class="box-shadow">
+	<div id="left" class="box">
 		<h3>MENU</h3>
 		<dl>
 			<dt>-CUT-</dt>
@@ -67,8 +70,8 @@
 	<br/>
 	<div id="right">
 		<ul>
-			<li class="box-shadow"><a id="contact" href="contact.html">contact</a></li>
-			<li class="box-shadow"><a id="blog" href="#">stylist blog</a></li>
+			<li class="box"><a id="contact" href="contact.html">contact</a></li>
+			<li class="box"><a id="blog" href="#">stylist blog</a></li>
 		</ul>
 	</div>
 	<!-- 右ここまで -->
